# plumial

./: .buildinfo  .buildinfo.bak  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  Taskfile.yml  api_reference.html  examples.html  examples.ipynb  genindex.html  index.html  mathematical_foundations.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tutorial.html
.doctrees/: api_reference.doctree  environment.pickle  examples.doctree  index.doctree  mathematical_foundations.doctree  tutorial.doctree
.github/workflows/: publish
_modules/: index.html  typing.html
_modules/plumial/: types.html
_modules/plumial/core/: D.html  P.html  basis.html
_modules/plumial/utils/: binary.html  functions.html  matrix_utils.html  symbolic.html
_modules/sympy/core/: expr.html
_sources/: api_reference.rst.txt  examples.rst.txt  tutorial.rst.txt
docs/: Makefile  api_reference.rst  conf.py  examples.rst  index.rst  mathematical_foundations.rst  tutorial.rst
docs/_templates/: class.rst
src/plumial/: __init__.py  types.py
src/plumial/core/: D.py  P.py  __init__.py  basis.py  polynomials.py
src/plumial/utils/: __init__.py  binary.py  functions.py  matrix_utils.py  symbolic.py
tests/: test_basis_encoding.py  test_binary_operations.py  test_caching.py  test_d_class.py  test_d_polynomials.py  test_difference_polynomials.py  test_integration.py  test_mathematical_operations.py  test_p_class.py  test_plumial.py  test_symbolic_operations.py
